<resources>
    <string name="app_name">MobilEszkozokProjeKt</string>
    <string name="home_page">Welcome to your Personalised Budgeting App!</string>
    <string name="estimation_page">Estimation Page</string>

    <string name="home_label">Home</string>
    <string name="budgeting_label">Budgeting</string>
    <string name="estimation_label">Estimation</string>

    <string name="name_label">Name</string>
    <string name="category_label">Category</string>
    <string name="value_label">Value</string>

    <string-array name="budgeting_category">
        <item>cost</item>
        <item>income</item>
        <item>debt</item>
        <item>investment</item>
    </string-array>

    <string name="cost_label">Cost</string>
    <string name="income_label">Income</string>

    <string name="add_label">Add</string>
    <string name="clear_label">Clear</string>
    <string name="delete_label">Delete</string>
    <string name="update_label">Update</string>

    <string name="type_input_hint">Type here!</string>

    <string name="dueDate_label">Due Date</string>
    <string name="select_due_date">Select due date</string>
    <string name="hello_blank_fragment" />
    <string name="upcoming_label">Upcoming</string>
    <string name="acquired_label">Acquired</string>
    <string name="outgoing_label">outgoing</string>
    <string name="acquired_label_menu">Acquired</string>
    <string name="estimationHomePageNavButtonText">Wealth estimation</string>
    <string name="upcomingHomePageNavButtonText">Upcoming expenses and incomes</string>
    <string name="budgetingHomePageNavButtonText">Mounthly budgeting</string>
    <string name="acquiredHomePageNavButtonText">Your wealth</string>

    <string-array name="acquired_category">
        <item>property</item>
        <item>vehicle</item>
        <item>goods</item>
        <item>currency</item>
    </string-array>
</resources>