<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment"
    android:id="@+id/nav_graph.xml">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.nje.mobileszkozokprojekt.fragment.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/estimationFragment"
        android:name="com.nje.mobileszkozokprojekt.fragment.EstimationFragment"
        android:label="@string/estimation_label"
        tools:layout="@layout/fragment_estimation"
        />

    <fragment
        android:id="@+id/budgetingFragment"
        android:name="com.nje.mobileszkozokprojekt.fragment.budgeting.BudgetingMainFragment"
        android:label="@string/budgeting_label"
        tools:layout="@layout/fragment_budgeting_main"
        />

</navigation>