<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.budgeting.BudgetingMainFragment"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/budgetingListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetingAddItemButton" />

    <ImageView
        android:id="@+id/diagramPlaceholder"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/budgetingNameTextInputEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/type_input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diagramPlaceholder" />

    <EditText
        android:id="@+id/budgetingValueEditTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints="100"
        android:ems="10"
        android:hint="@string/type_input_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/budgetingNameTextInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/budgetingCategorySpinner" />

    <ToggleButton
        android:id="@+id/budgetingTypeToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:textOff="@string/cost_label"
        android:textOn="@string/income_label"
        app:layout_constraintBottom_toBottomOf="@+id/budgetingValueEditTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/budgetingNameTextInputEditText"
        app:layout_constraintStart_toEndOf="@+id/budgetingValueEditTextNumberDecimal" />

    <TextView
        android:id="@+id/budgetingNameInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/name_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/budgetingNameTextInputEditText"
        app:layout_constraintEnd_toStartOf="@+id/budgetingNameTextInputEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/budgetingCategoryInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/budgetingCategorySpinner"
        app:layout_constraintEnd_toEndOf="@+id/budgetingNameInputTextView" />

    <TextView
        android:id="@+id/budgetingValueInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/budgetingValueEditTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/budgetingNameInputTextView" />

    <Button
        android:id="@+id/budgetingAddItemButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/add_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetingValueEditTextNumberDecimal" />

    <Button
        android:id="@+id/budgetingClearAllInputButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:text="@string/clear_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/budgetingAddItemButton" />

    <Spinner
        android:id="@+id/budgetingCategorySpinner"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:entries="@array/budgeting_category"
        app:layout_constraintStart_toStartOf="@+id/budgetingNameTextInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/budgetingNameTextInputEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>